samples/_failures_safe/1761628221_ec0a49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ebb36a5.c: In function ‘main’:
./samples/SAFE/__tmp_4ebb36a5.c:157:5: error: expected declaration or statement at end of input
  157 |     print_hex(compressed.data, compressed.size);
      |     ^~~~~~~~~
